# riscv-cache-emulator

./: CMakeLists.txt  README.md  REPORT.md  main.cpp  task.asm
.github/workflows/: classroom.yml
asm_task/: task.asm
include/: cache_abstract.hpp  cache_bplru.hpp  cache_lru.hpp  config.hpp  processor.hpp  ram.hpp
src/: cache_abstract.cpp  cache_bplru.cpp  cache_lru.cpp  main.cpp  processor.cpp  processor_execs.cpp  ram.cpp
